@@ -482,7 +482,8 @@ void CEditorCodeWidget::SlotDebugStart()
     m_spCurrentProject->m_rwLock.lockForRead();
     qint32 iCurrProject = m_spCurrentProject->m_iId;
     m_spCurrentProject->m_rwLock.unlock();
-    CSceneMainScreen* pMainSceneScreen = new CSceneMainScreen(m_spUi->pSceneView, true);
+    CSceneMainScreen* pMainSceneScreen = new CSceneMainScreen(m_spUi->pSceneView);
+    pMainSceneScreen->Initialize(nullptr, true);
 
     connect(pMainSceneScreen, &CSceneMainScreen::SignalUnloadFinished,
             this, &CEditorCodeWidget::SlotDebugUnloadFinished);
