@@ -1,21 +1,43 @@
 #include "WindowsMainWindow.h"
+#include "Application.h"
 #include "Settings.h"
 #include "SVersion.h"
+#include "WindowContext.h"
+
+#include "Systems/ProjectDownloader.h"
 
 #include <QDir>
 #include <QGuiApplication>
 #include <QMessageBox>
 #include <QScreen>
 #include <QStyle>
+#include <QWinTaskbarButton>
+#include <QWinTaskbarProgress>
+#include <QtPlatformHeaders/QWindowsWindowFunctions>
 
 CWindowsMainWindow::CWindowsMainWindow(QWidget* pParent) :
   CMainWindow(pParent)
 {
+  m_pTaskButton = new QWinTaskbarButton(this);
 }
 
 CWindowsMainWindow::~CWindowsMainWindow()
 {
 
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CWindowsMainWindow::OnShow()
+{
+  m_pTaskButton->setWindow(windowHandle());
+
+  m_pTaskProgress = m_pTaskButton->progress();
+  m_pTaskProgress->setVisible(false);
+
+  // Fixes problems with OpenGL based windows
+  // https://doc.qt.io/qt-5/windows-issues.html#fullscreen-opengl-based-windows
+  QWindowsWindowFunctions::setHasBorderInFullScreen(windowHandle(), true);
 }
 
 //----------------------------------------------------------------------------------------
@@ -78,6 +100,19 @@ void CWindowsMainWindow::ConnectSlotsImpl()
 
   connect(m_spSettings.get(), &CSettings::resolutionChanged,
           this, &CWindowsMainWindow::SlotResolutionChanged, Qt::QueuedConnection);
+
+  connect(m_spWindowContext.get(), &CWindowContext::SignalChangeAppOverlay,
+          this, &CWindowsMainWindow::SlotChangeAppOverlay);
+
+  if (auto spDownloader = CApplication::Instance()->System<CProjectDownloader>().lock())
+  {
+    connect(spDownloader.get(), &CProjectDownloader::SignalDownloadFinished,
+            this, &CWindowsMainWindow::SlotDownloadFinished, Qt::QueuedConnection);
+    connect(spDownloader.get(), &CProjectDownloader::SignalDownloadStarted,
+            this, &CWindowsMainWindow::SlotDownloadStarted, Qt::QueuedConnection);
+    connect(spDownloader.get(), &CProjectDownloader::SignalProgressChanged,
+            this, &CWindowsMainWindow::SlotProgressChanged, Qt::QueuedConnection);
+  }
 }
 
 //----------------------------------------------------------------------------------------
@@ -115,4 +150,52 @@ void CWindowsMainWindow::OldSettingsDetected()
   {
     m_spSettings->SetSettingsVersion(QT_VERSION_CHECK(version.m_iMajor, version.m_iMinor, version.m_iPatch));
   }
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CWindowsMainWindow::SlotChangeAppOverlay(const QString& sImage)
+{
+  if (nullptr == m_pTaskButton) { return; }
+
+  QFileInfo info(sImage);
+  if (sImage.isEmpty() || !info.exists())
+  {
+    m_pTaskButton->setOverlayIcon(QIcon());
+  }
+  else
+  {
+    m_pTaskButton->setOverlayIcon(QIcon(sImage));
+  }
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CWindowsMainWindow::SlotDownloadFinished(qint32 iProjId)
+{
+  if (nullptr == m_pTaskProgress) { return; }
+
+  Q_UNUSED(iProjId)
+  m_pTaskProgress->setVisible(false);
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CWindowsMainWindow::SlotDownloadStarted(qint32 iProjId)
+{
+  if (nullptr == m_pTaskProgress) { return; }
+
+  Q_UNUSED(iProjId)
+  m_pTaskProgress->setVisible(true);
+  m_pTaskProgress->setValue(0);
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CWindowsMainWindow::SlotProgressChanged(qint32 iProjId, qint32 iProgress)
+{
+  if (nullptr == m_pTaskProgress) { return; }
+
+  Q_UNUSED(iProjId)
+  m_pTaskProgress->setValue(iProgress);
 }
